--- a/client/src/assets/css/product-card.css
+++ b/client/src/assets/css/product-card.css
@@ -6,27 +6,29 @@
   padding-bottom: 10px;
 }
 
-/* .product-image {
-  background-color: #000000;
+.card-image {
   aspect-ratio: 1/1;
-  margin-bottom: 10px;
-} */
+}
+
+.crop-img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
 
 /* Project page styles -------------- */
 .product-section {
- display: flex;
+ display: grid;
+ grid-template-columns: 400px auto;
+ gap: 40px;
 }
 
 .product-img {
   aspect-ratio: 1/1;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
   border: 10px solid var(--white);
   box-shadow: var(--shadow1);
   margin-right: 40px;
-  max-width: 50%;
- 
+  width: 400px;
 }
 
 .price {
@@ -38,3 +40,7 @@
   margin: 20px 0;
 }
 
+.product-info {
+  display: flex;
+  flex-direction: column;
+}
